# four

./: .gitignore  CMakeLists.txt  History.txt  LICENSE  README.md  TODO  dist.info  four-1.0.0-1.rockspec  four.lua
doc/: Bloom.lua  SimpleShader.lua  index.html
doc/examples/: SimpleShader.lua
doc/old/: bump.lua  bunny2.lua  bunny3.lua  bunny4.lua  diffuse.lua  eyes.lua  gooch.lua  noise.lua  normals.lua  psyche.lua  psyche2.lua  shadefuns.lua  sinex1.lua  sinox0.lua  sinox1.lua  sinox2.lua  snake.lua  snakemap.lua  snaoise.lua  snoise.lua  vortex.lua  vsnake.lua
doc/old/models/: bunny.yml
four/: Camera.lua  Effect.lua  Framebuffer.lua  Geometry.lua  Quat.lua  Renderer.lua  RendererGL32.lua  V3.lua  gl.lua  init.lua
lib/: four.lua
lib/four/: Buffer.lua  Camera.lua  Color.lua  Effect.lua  Geometry.lua  M4.lua  Manip.lua  Quat.lua  Renderer.lua  RendererGL32.lua  Space.lua  Spatial.lua  Texture.lua  Transform.lua  V2.lua  V3.lua  V4.lua  gl.lua
scripts/: build.lua  doc.lua
test/: Color_test.lua  M4_test.lua  Quat_test.lua  V2_test.lua  V3_test.lua  V4_test.lua  all.lua  app.lua  bunny.lua  bunny_geometry.lua  checkboard.lua  contour.lua  cube.lua  demo.lua  diffuse.lua  dtri.lua  dtri_test.lua  explode.lua  four_test.lua  geokit.lua  geokit_test.lua  geomview.lua  gooch.lua  hds.lua  hds_test.lua  jscube.lua  manip.lua  minimal.lua  models.lua  normals.lua  shadefuns.lua  silhouette.lua  sinex1.lua  snake.lua  tricolor.lua  utils.lua  vblend.lua  vortex.lua  vsnake.lua
