# --------------------------------------------------------------
#  four
#
#  Modern OpenGL rendering engine for Lubyk.
#
#  provides:
#    four.lua
# --------------------------------------------------------------
set(MODULE_NAME four)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)
